fix(Progress): improve animation effect of active state in Dark mode

--- a/src/Progress/styles/animation.less
+++ b/src/Progress/styles/animation.less
@@ -5,7 +5,7 @@
   }
 
   20% {
-    opacity: 0.5;
+    opacity: 0.8;
     width: 0;
   }
 
@@ -22,7 +22,7 @@
   }
 
   20% {
-    opacity: 0.5;
+    opacity: 0.8;
     height: 0;
   }
 
