--- a/src/Progress/styles/progress-line.less
+++ b/src/Progress/styles/progress-line.less
@@ -29,7 +29,7 @@
         inset-inline-end: 0;
         background-color: #fff;
         border-radius: var(--rs-radius-lg);
-        animation: progress-active 1.5s cubic-bezier(0.23, 1, 0.32, 1) infinite;
+        animation: progress-active 1.2s cubic-bezier(0.23, 1, 0.32, 1) infinite;
       }
     }
   }
